--- a/app/components/media-track-cover-picture/media-track-cover-picture.component.css
+++ b/app/components/media-track-cover-picture/media-track-cover-picture.component.css
@@ -1,7 +1,6 @@
 .media-track-cover-picture-container {
   height: 70px;
   width: 70px;
-  margin: 0 10px;
   display: flex;
   align-items: center;
   justify-content: center;
